// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TickCircleIcon Theme: jobStreet Default 1`] = `
<svg
  class="atoms__width_standardText atoms__height_standardText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: jobStreet Inline 1`] = `
<svg
  class="atoms__width_standardTextInline atoms__height_standardTextInline Icon__inline Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: jobStreet Sized 1`] = `
<svg
  class="atoms__width_largeText atoms__height_largeText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: seekAnz Default 1`] = `
<svg
  class="atoms__width_standardText atoms__height_standardText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: seekAnz Inline 1`] = `
<svg
  class="atoms__width_standardTextInline atoms__height_standardTextInline Icon__inline Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: seekAnz Sized 1`] = `
<svg
  class="atoms__width_largeText atoms__height_largeText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: seekAsia Default 1`] = `
<svg
  class="atoms__width_standardText atoms__height_standardText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: seekAsia Inline 1`] = `
<svg
  class="atoms__width_standardTextInline atoms__height_standardTextInline Icon__inline Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: seekAsia Sized 1`] = `
<svg
  class="atoms__width_largeText atoms__height_largeText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: wireframe Default 1`] = `
<svg
  class="atoms__width_standardText atoms__height_standardText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: wireframe Inline 1`] = `
<svg
  class="atoms__width_standardTextInline atoms__height_standardTextInline Icon__inline Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;

exports[`TickCircleIcon Theme: wireframe Sized 1`] = `
<svg
  class="atoms__width_largeText atoms__height_largeText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M8 .5C3.86.5.5 3.858.5 8c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C15.5 3.858 12.142.5 8 .5zm4.47 5.328l-5.59 5.98c-.14.152-.34.238-.546.238-.208 0-.405-.086-.547-.237L3.537 9.41c-.284-.303-.268-.777.034-1.06.303-.283.777-.27 1.062.033l1.7 1.814 5.042-5.397c.282-.303.758-.318 1.06-.036.302.284.32.758.036 1.06z"
  />
</svg>
`;
